Avoiding URLs as keys to a map in GradleDistributionManager, as their hashCode/equals may block for a long time.